--- a/frontend/src/components/session/login.css
+++ b/frontend/src/components/session/login.css
@@ -3,15 +3,15 @@
     position: relative;
     top: 0;
     margin-top: 0;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     display: block;
-    background: black;
+    background: rgb(221, 221, 4);
     color: #eee;
-    padding: 12px 28px;
+    padding: 12px 24px;
     border: 0;
     cursor: pointer;
     font-size: 14px;
-    height: 48px;
+    height: 24px;
     opacity: 0.9;
     border-radius: 5px;
     font-weight: bold;
@@ -20,12 +20,12 @@
 
 
 .login-form-container {
-    display: flex;
+    display: block;
     align-items: center;
     margin-top: 100px;
-    background: white;
+    background: red;
     flex-direction: column;
-    padding: 4%;
+    padding: 30px;
 }
 
 .login-form {
