--- a/frontend/src/components/navbar/navbar.css
+++ b/frontend/src/components/navbar/navbar.css
@@ -21,6 +21,17 @@
     cursor: pointer;
 }
 
+#post {
+    color: black;
+    border: 1px solid gray;
+    border-radius: 5px;
+    padding: 3px 5px;
+    box-shadow: 2px 4px rgba(196, 177, 13, 0.911);
+    font-size: 18px;
+    border-bottom-style: none;
+    text-decoration: none;
+}
+
 #login{
     color: black;
     border: 1px solid gray;
@@ -29,6 +40,7 @@
     box-shadow: 2px 4px rgba(196, 177, 13, 0.911);
     font-size: 18px;
     border-bottom-style: none;
+    text-decoration: none;
 }
 
 #signup{
@@ -40,6 +52,7 @@
     box-shadow: 2px 4px rgba(196, 177, 13, 0.911);
     font-size: 18px;
     border-bottom-style: none;
+    text-decoration: none;
 }
 
 .login-signup{
@@ -68,6 +81,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    max-width: 1400px;
+    margin: 0 auto;
 }
 
 .search-bar-container {
