--- a/frontend/src/components/session/login.css
+++ b/frontend/src/components/session/login.css
@@ -5,7 +5,7 @@
     margin-top: 0;
     margin-bottom: 5px;
     display: block;
-    background: rgb(221, 221, 4);
+    background: rgb(10, 10, 0);
     color: #eee;
     padding: 12px 24px;
     border: 0;
@@ -51,7 +51,7 @@
     border-radius: 4px;
 }
 
-/* .login-form > label {
+.login-form > label {
     margin-bottom: 6px;
     font-size: 14px;
     text-align: left;
@@ -78,4 +78,4 @@
 .text-orange {
     padding-left: 5px;
     color: rgb(238, 255, 0);
-} */
+}
