--- a/frontend/src/components/listing/listing.css
+++ b/frontend/src/components/listing/listing.css
@@ -1,9 +1,3 @@
-.listing-grid {
-    width: 30%;
-    margin: 1.66%;
-    float: left;
-}
-
 .listing-index-container {
     margin: 0 auto;
     max-width: 1400px;
@@ -17,4 +11,60 @@
     justify-content: center;
     font-weight: 600;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+.listing-grid-container {
+   display: flex;
+   flex: wrap;
+}
+
+.listing-link {
+  display: inline-block;
+  margin-bottom: 8px;
+  width: calc(50% - 4px);
+  margin-right: 8px;
+  text-decoration: none;
+  color: black;
+}
+
+.listing-link:nth-of-type(2n) {
+  margin-right: 0;
+}
+
+@media screen and (min-width: 50em) {
+  .listing-link  {
+    width: calc(25% - 6px);
+  }
+  
+  .listing-link:nth-of-type(2n) {
+    margin-right: 8px;
+  }
+  
+  .listing-link:nth-of-type(4n) {
+    margin-right: 0;
+  }
+}
+
+.listing-link:hover img {
+    transform: scale(1.15);
+}
+
+.list-item-container {
+   margin: 0;
+  overflow: hidden;
+}
+
+figcaption {
+    margin-top: 15px;
+    text-align: center;
+}
+
+.listing-thumbnail{
+  border: none;
+  width: 100%;
+  height: 100%;
+  display: block;
+  background: #ccc;
+  transition: transform .2s ease-in-out;
+  object-fit: fill;
 }
