--- a/frontend/src/components/session/signup.css
+++ b/frontend/src/components/session/signup.css
@@ -1,39 +1,43 @@
 .clicky2 {
-    
-      /** Offset the Position **/
+    /** Offset the Position **/
     position: relative;
     top: 0;
     margin-top: 0;
-    margin-bottom: 5px;
+    margin-bottom: 15px;
     display: block;
-    background: rgb(221, 221, 4);
+    background: rgb(10, 10, 0);
     color: #eee;
-    padding: 12px 24px;
+    /* padding: 12px 24px; */
     border: 0;
     cursor: pointer;
-    font-size: 14px;
-    height: 24px;
+    font-size: 20px;
+    height: 30px;
     opacity: 0.9;
     border-radius: 5px;
     font-weight: bold;
-
+    height: 45px;
 }
 
 
 .sign-form-container {
-    display: block;
-    align-items: center;
-    margin-top: 100%;
-    background: rgb(238, 99, 7);
+    display: flex;
+    background: rgb(255, 255, 255);
     flex-direction: column;
-    padding: 50%;
+    align-items: center;
+    margin-top: 120px;
+    /* border: black 1px solid; */
+    /* height: max-content; */
+    /* width: max-content; */
+    /* margin-left: 550px; */
+   
 }
 
 .sign-form {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    width: fit-content;
+    /* width: fit-content; */
+    height: fit-content;
 
 }
 
@@ -42,12 +46,46 @@
     box-shadow: none;
     padding: 9px 16px;
     border: 1px solid #E1E3DF;
-    height: 60px;
+    height: 30px;
+    font-size: 18px;
 }
 
 .sign-form-box {
     outline: 0;
-    padding: 20px;
-    width: 700px;
+    padding: 40px;
+    width: 500px;
     border-radius: 4px;
+    border: rgb(255, 255, 255) 1px solid;
+   box-shadow: 2px 4px 10px rgb(0, 0, 0);
 }
+
+.sign-form > label {
+    margin-bottom: 6px;
+    font-size: 20px;
+    text-align: left;
+    font-weight: 560;
+}
+
+.sign-header h1 {
+    margin-top: 0;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.register-header h1 {
+    margin-top: 0;
+    font-size: 30px;
+    /* font-weight: bold; */
+    font-weight: 560;
+}
+
+/* .register-header p {
+    font-size: 14px;
+    font-weight: 300;
+} */
+
+.text-orange {
+    padding-left: 5px;
+    color: rgb(238, 255, 0);
+}
+
