--- a/frontend/src/components/session/signup.css
+++ b/frontend/src/components/session/signup.css
@@ -89,3 +89,20 @@
     color: rgb(238, 255, 0);
 }
 
+.register-header{
+    display: flex;
+    /* flex-direction: column-reverse; */
+    align-items: center;
+    justify-content: center;
+}
+#logo2{
+    background-image: url(/static/media/sunday-logo.d5fd263d.png);
+    width: 87px;
+    height: 85px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    color: white;
+    margin-right: 20px;
+    margin-left: -100px;
+    margin-top: -17px;
+}
