--- a/frontend/src/components/listing/listing_show.css
+++ b/frontend/src/components/listing/listing_show.css
@@ -14,12 +14,13 @@
       display: flex;
     flex-direction: column;
     width: 317px;
-    height: 150px;
+    height: 200px;
     border: solid 1px #e6e6e6;
     border-radius: 4px;
     position: sticky;
     top: 18px;
     padding: 0 6px;
+    margin-top: 90px;
 }
 
 .name-box{
@@ -91,10 +92,29 @@
   padding:85px 20px;
   width: 700px;
     height: 445px;
-    display: flex;
 }
 
 .listing-show-header{
   text-transform: uppercase;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.listing-show-description2{
+  margin-top: 45px;
+}
+
+.email-box{
+    padding: 16px 11px 11px 11px;
+    width: 283px;
+    border-bottom: solid 1px #e6e6e6;
+    font-size: 14px;
+    height: 24px;
+    color: #666;
+    display: flex;
+}
+
+.email{
+     padding-left: 10px;
+    text-decoration: none;
+    color: #666;
 }
