--- a/frontend/src/components/comment/comment.css
+++ b/frontend/src/components/comment/comment.css
@@ -17,6 +17,36 @@
     font-size: 16px;
 }
 
-.comment-item{
+.comment-form {
+    display: flex;
+    justify-content: space-between;
+    width: 98%;
+}
+
+.comment-item {
     margin: 20px auto;
+}
+
+.comment-item-inline {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 98%;
+}
+
+.comment-del-btn {
+    height: 30px;
+    background-color: rgb(197, 0, 0);
+    color: whitesmoke;
+    border: 1px black solid;
+    box-shadow: 1px 1px black;
+    outline: none;
+}
+
+.comment-content {
+    font-size: 1.3rem;
+}
+
+.breakline {
+    width: 100%;
 }
