Add create item errors

--- a/frontend/src/components/profile/proItem.css
+++ b/frontend/src/components/profile/proItem.css
@@ -114,7 +114,16 @@
   border: none;
 }
 
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 .create-submit {
   width: 100px;
   margin: 0 auto;
+}
+
+.create-errors {
+  color: red;
 }
