--- a/frontend/src/components/listing/listing.css
+++ b/frontend/src/components/listing/listing.css
@@ -27,6 +27,7 @@
   margin-right: 8px;
   text-decoration: none;
   color: black;
+  font-family: 'Taviraj', serif;
 }
 
 .listing-link:nth-of-type(2n) {
