--- a/frontend/src/components/navbar/navbar.css
+++ b/frontend/src/components/navbar/navbar.css
@@ -24,6 +24,7 @@
     font-size: 18px;
     border-bottom-style: none;
     text-decoration: none;
+    font-family: 'Taviraj', serif;
 }
 
 #login{
@@ -35,6 +36,7 @@
     font-size: 18px;
     border-bottom-style: none;
     text-decoration: none;
+    font-family: 'Taviraj', serif;
 }
 
 #logout {
@@ -48,6 +50,7 @@
     text-decoration: none;
     width: 92.22px;
     background-color: white;
+    font-family: 'Taviraj', serif;
 }
 
 #signup{
@@ -59,6 +62,7 @@
     font-size: 18px;
     border-bottom-style: none;
     text-decoration: none;
+    font-family: 'Taviraj', serif;
 }
 
 .login-signup{
