--- a/frontend/src/components/profile/proItem.css
+++ b/frontend/src/components/profile/proItem.css
@@ -13,6 +13,7 @@
     background-color: white;
     border-radius: 5px;
    box-shadow: 1px 2px rgba(0, 0, 0, 0.74);
+   font-family: 'Taviraj', serif;
 }
 
 .food-pic{
@@ -31,6 +32,7 @@
 .info{
       display: flex;
     flex-direction: column;
+    
 }
 
 .about{
@@ -49,6 +51,7 @@
     flex-direction: column;
     padding-top: 30px;
     margin: 0 auto;
+    font-family: 'Taviraj', serif;
 }
 
 .price{
@@ -66,6 +69,7 @@
   border: 1px black solid;
   box-shadow: 1px 1px black;
   outline: none;
+  font-family: 'Taviraj', serif;
 }
 
 .delete-btn:hover {
@@ -76,8 +80,8 @@
   background-color: #EFEFEF;
   display: flex;
   flex-direction: column;
-  padding: 20px;
-  width: 400px;
+  padding: 20px 30px;
+  width: 450px;
   margin: 0 auto;
   border: solid 1px #eeeeef;
   border-radius: 5px;
@@ -85,34 +89,24 @@
   font-weight: 700;
   font-size: 16px;
   margin-bottom: 20px;
+  font-family: 'Taviraj', serif;
 }
+
 
 .create-form label {
   display: flex;
   justify-content: space-between;
   margin-bottom: 15px;
+  line-height: 30px;
 }
 
-.create-form input {
-  margin-left: 10px;
-  width: 300px;
-  border: 1px solid #D3D3D3;
-  border-radius: 2px;
-}
-
-.create-form textarea {
-  margin-left: 10px;
-  width: 300px;
-  resize: none;
-  border: 1px solid #D3D3D3;
-  border-radius: 2px;
-  padding: 1px;
-
-}
 
 .create-image input {
   border: none;
+  font-family: 'Taviraj', serif;
+  font-size: 12px;
 }
+
 
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
@@ -120,8 +114,39 @@ input::-webkit-inner-spin-button {
 }
 
 .create-submit {
-  width: 100px;
-  margin: 0 auto;
+    position: relative;
+    top: 0;
+    margin-top: 15px;
+    display: block;
+    background: rgb(10, 10, 0);
+    color: #eee;
+    border: 0;
+    cursor: pointer;
+    font-size: 20px;
+    height: 40px;
+    opacity: 0.9;
+    border-radius: 5px;
+    font-weight: bold;
+}
+
+.create-price input{
+  width: 50px;
+  text-align: center;
+}
+
+.create-input{
+    border-radius: 4px;
+    box-shadow: none;
+    padding: 5px 10px;
+    border: 1px solid #E1E3DF;
+    font-size: 18px;
+    margin-left: 10px;
+    width: 300px;
+}
+
+.create-form textarea {
+  resize: none;
+  height: 60px;
 }
 
 .create-errors {
