--- a/frontend/src/components/comment/comment.css
+++ b/frontend/src/components/comment/comment.css
@@ -10,6 +10,10 @@
     width: 100%;
 }
 
+.comments-container h1 {
+    font-family: arial, sans-serif;
+}
+
 .comment-field {
     width: 450px;
     height: 24px;
